# gen-cli

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_cli.py  test_config.py  test_core.py  test_doctor.py  test_filename.py  test_helper.py  test_list.py  test_main.py  test_template.py  test_version.py
