[project]
name = "gen-cli"
version = "1.0.0"
description = "Gen-CLI is a Python-based tool to generate boilerplate code and framework templates for multiple programming languages."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }

authors = [{ name = "Prasad Raju G" }]
dependencies = ["Jinja2>=3.1.6"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
gen = "gen.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pylint>=3.3.8",
    "black>=25.9.0",
    "isort>=6.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.setuptools.package-data]
gen = ["templates/**/*"]
